# SF132_to_SF133

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md  README_FIXES.md  README_WINDOWS_FIX.md  REFACTORING.md  WINDOWS_FEATURES.md  compat.py  config.py  excel_data_cleaner.py  excel_file_recovery.py  excel_handler_win.py  excel_processor.py  excel_processor_config.py  factory.py  file_operations2.py  file_operations_win.py  fix_excel_file.py  formula_file.txt  gui.py  logger_config.py  main.py  pyproject.toml  requirements.txt  setup.py  sf132_sf133_recon.py  sf132_sf133_recon_fixed.py  test_file_locking.py  test_processor.py  todo_enhancements.py  todo_list.md  utils.py  win_path_handler.py  windows_integration.py
github/: copilot-instructions.md
scripts/: build_deployment.py
src/sf132_sf133_recon/: __init__.py  config.py  main.py
src/sf132_sf133_recon/core/: excel_processor.py
src/sf132_sf133_recon/modules/: com_operations.py  excel_cleaner.py  excel_handler.py  excel_recovery.py  excel_session.py  file_operations.py  gui.py  windows_integration.py
src/sf132_sf133_recon/utils/: logger.py  win_api.py  win_path_handler.py
tests/: test_excel_processor.py  test_package.py
utils/: analyze_excel_file.py
