[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sf132-sf133-recon"
version = "1.0.0"
authors = [
    {name = "Organization"}
]
description = "A tool for reconciling SF132 and SF133 Excel files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.0.0",
    "psutil",
    "pywin32;platform_system=='Windows'",  # Note: This app requires Windows to function fully
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

# The application requires Windows to function properly
[project.scripts]
sf132-sf133-recon = "sf132_sf133_recon.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/SF132_to_SF133"
"Bug Tracker" = "https://github.com/yourusername/SF132_to_SF133/issues"

[tool.setuptools]
package-dir = {"" = "src"}